Refactor testing of thrown exceptions (#3676)